<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_product"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:background="#F4E9B0"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp" >

            <ImageView
                android:id="@+id/iv_thumbProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/iv_thumbProduct"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_price"
                android:textSize="14sp"
                android:textColor="#0DF519"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rating"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_category"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_rating"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_detailedProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_detailedProduct"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>